// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Contexts Languages 1`] = `
<div
  style="color:white;background:#173F5F;height:100vh;padding:10px"
>
  Your locale is "unknown", so I say "NULL"!
</div>
`;

exports[`Storyshots Addons|Contexts Simple CSS Theming 1`] = `
<div
  style="color:white;background:#173F5F;height:100vh;padding:10px"
>
  I'm a children of the injected 'div' (where provides a theming context).
</div>
`;
